<resources>
    <string name="app_name">Hello World</string>
    <string name="textview_second">Falcon, Diego 4/19/2022</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="submit">Submit</string>
    <string name="select_your_birthdate">Select your Birthdate</string>
    <string name="ageError">User needs to be at least 18 years old</string>
    <string name="inputError">Please fill all the fields</string>
    <string name="validEmail">Please add a valid email</string>
    <string name="noBirthdate">Please select your birthdate</string>
    <string name="Back">Back</string>
    <string name="Description">Description</string>
    <string name="Occupation">Occupation</string>
    <string name="Profile">Profile</string>
    <string name="Matches">Matches</string>
    <string name="Settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="matches_description">This is where matches will go</string>
    <string name="settings_description">This is where settings will go</string>
    <string name="secondary_text">Secondary Text</string>
    <string name="title">Title</string>
    <string name="matchedImage">This is the matched image</string>
    <string name="random_person">random person</string>
    <string name="random_person_2">random person 2</string>
    <string name="liked_message">You liked: %s</string>
    <string name="pick_your_reminder_time">Pick your reminder time</string>
    <string name="select_time">Select Time</string>
    <string name="timeSelected">Selected Time</string>
    <string name="setmaxdistance">Set Max Distance</string>
    <string name="distanceInMiles">Type distance in miles</string>
    <string name="selectGenderPreference">Select your gender preference</string>
    <string name="he_him">He/Him</string>
    <string name="sheHer">She/Her</string>
    <string name="she_Her">She/Her</string>
    <string name="they_them">They/Them</string>
    <string name="noAnswer">No answer</string>
    <string name="select_your_privacy_status">Select your privacy status</string>
    <string name="privateValue">Private</string>
    <string name="publicValue">Public</string>
    <string name="interestedAgeRange">Interested Age Range</string>
    <string name="save">Save</string>
    <string name="invalidSettings">Settings are Invalid</string>
    <string name="selectTimeMessage">Selected Time: %d:%s</string>
    <string name="selectReminderTime">Select Reminder Time</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Please turn on our location services to use this feature</string>
    <string name="location_settings">Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="started_location_updates">Started Location Updates</string>
</resources>