<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="@dimen/cardElevation"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/matches_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageHeight"
            android:background="?attr/colorPrimaryDark"
            android:scaleType="centerCrop"
            android:contentDescription="@string/matchedImage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/cardPaddingLayout">

            <TextView
                android:id="@+id/matches_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random_person"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/matches_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random_person_2"
                android:textAppearance="?attr/textAppearanceBody2" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="@dimen/fiftyDPImage"
            android:layout_height="@dimen/FiftyDPHeight"
            app:srcCompat="@drawable/heart_icon"
            android:scaleType="fitCenter"
            android:layout_gravity="end"
            />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>